QoL Features + code cleanup